infra/observability/base/gateway-headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-gateway-collector-headless
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: otel-gateway
  ports:
    - name: otlp-grpc
      port: 4317
      targetPort: 4317
