infra/observability/base/router-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-router
  annotations:
    service.kubernetes.io/topology-mode: Auto
spec:
  selector:
    altinn.studio/otel-collector: otel-router
  ports:
    - name: otlp-grpc
      port: 4317
      targetPort: 4317
      appProtocol: kubernetes.io/h2c
    - name: otlp-http
      port: 4318
      targetPort: 4318
      appProtocol: http
